main/code/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> multiple_statements
Rule 2     multiple_statements -> multiple_statements statement
Rule 3     multiple_statements -> statement
Rule 4     statement -> open
Rule 5     statement -> closed
Rule 6     open -> IF condition statement
Rule 7     open -> IF condition closed ELSE open
Rule 8     open -> WHILE condition open
Rule 9     open -> FOR for_condition open
Rule 10    closed -> simple
Rule 11    closed -> block
Rule 12    closed -> IF condition closed ELSE closed
Rule 13    closed -> WHILE condition closed
Rule 14    closed -> FOR for_condition closed
Rule 15    condition -> L_PAREN expr R_PAREN
Rule 16    for_condition -> L_PAREN declaration expr SEMICOLON expr R_PAREN
Rule 17    multi_declaration -> multi_declaration ID COMMA
Rule 18    multi_declaration -> multi_declaration ID ASSIGN expr COMMA
Rule 19    multi_declaration -> ID COMMA
Rule 20    multi_declaration -> ID ASSIGN expr COMMA
Rule 21    stop -> ID SEMICOLON
Rule 22    stop -> ID ASSIGN expr SEMICOLON
Rule 23    declaration -> TYPE ID SEMICOLON
Rule 24    declaration -> TYPE ID ASSIGN expr SEMICOLON
Rule 25    declaration -> TYPE ID ASSIGN function_call
Rule 26    declaration -> TYPE multi_declaration stop
Rule 27    block -> L_FLOWBRACE multiple_statements R_FLOWBRACE
Rule 28    simple -> expr SEMICOLON
Rule 29    simple -> declaration
Rule 30    simple -> SEMICOLON
Rule 31    simple -> function
Rule 32    simple -> function_call
Rule 33    simple -> RETURN ID SEMICOLON
Rule 34    simple -> RETURN INT_NUM SEMICOLON
Rule 35    empty -> <empty>
Rule 36    function_call -> ID L_PAREN call_params R_PAREN SEMICOLON
Rule 37    call_params -> empty
Rule 38    call_params -> yes_call_params end_call_params
Rule 39    call_params -> end_call_params
Rule 40    yes_call_params -> yes_call_params INT_NUM COMMA
Rule 41    yes_call_params -> yes_call_params ID COMMA
Rule 42    yes_call_params -> INT_NUM COMMA
Rule 43    yes_call_params -> ID COMMA
Rule 44    end_call_params -> INT_NUM
Rule 45    end_call_params -> ID
Rule 46    yes_dec_params -> yes_dec_params TYPE ID COMMA
Rule 47    yes_dec_params -> TYPE ID COMMA
Rule 48    end_dec_params -> TYPE ID
Rule 49    dec_params -> empty
Rule 50    dec_params -> yes_dec_params end_dec_params
Rule 51    dec_params -> end_dec_params
Rule 52    function -> TYPE ID L_PAREN dec_params R_PAREN function_2
Rule 53    function_2 -> SEMICOLON
Rule 54    function_2 -> block
Rule 55    expr -> expr assignment exprOR
Rule 56    expr -> expr assignment ID L_PAREN call_params R_PAREN
Rule 57    expr -> exprOR
Rule 58    assignment -> ASSIGN
Rule 59    assignment -> PLUS_ASSIGN
Rule 60    assignment -> MINUS_ASSIGN
Rule 61    assignment -> MUL_ASSIGN
Rule 62    assignment -> DIV_ASSIGN
Rule 63    assignment -> AND_ASSIGN
Rule 64    assignment -> OR_ASSIGN
Rule 65    assignment -> XOR_ASSIGN
Rule 66    assignment -> MOD_ASSIGN
Rule 67    assignment -> L_SHIFT_ASSIGN
Rule 68    assignment -> R_SHIFT_ASSIGN
Rule 69    exprOR -> exprOR OR exprAND
Rule 70    exprOR -> exprAND
Rule 71    exprAND -> exprAND AND exprBITOR
Rule 72    exprAND -> exprBITOR
Rule 73    exprBITOR -> exprBITOR BIT_OR exprBITXOR
Rule 74    exprBITOR -> exprBITXOR
Rule 75    exprBITXOR -> exprBITXOR BIT_XOR exprBITAND
Rule 76    exprBITXOR -> exprBITAND
Rule 77    exprBITAND -> exprBITAND BIT_AND exprEQ
Rule 78    exprBITAND -> exprEQ
Rule 79    exprEQ -> exprEQ EQ exprRELOP
Rule 80    exprEQ -> exprEQ NE exprRELOP
Rule 81    exprEQ -> exprRELOP
Rule 82    exprRELOP -> exprRELOP relop exprSHIFT
Rule 83    exprRELOP -> exprSHIFT
Rule 84    relop -> LE
Rule 85    relop -> LT
Rule 86    relop -> GE
Rule 87    relop -> GT
Rule 88    exprSHIFT -> exprSHIFT L_SHIFT exprOP
Rule 89    exprSHIFT -> exprSHIFT R_SHIFT exprOP
Rule 90    exprSHIFT -> exprOP
Rule 91    exprOP -> exprOP PLUS term
Rule 92    exprOP -> exprOP MINUS term
Rule 93    exprOP -> term
Rule 94    term -> term MULTIPLY factor
Rule 95    term -> term DIVIDE factor
Rule 96    term -> term MOD factor
Rule 97    term -> factor
Rule 98    factor -> NOT factor
Rule 99    factor -> PLUS factor
Rule 100   factor -> MINUS factor
Rule 101   factor -> PLUS_PLUS factor
Rule 102   factor -> MINUS_MINUS factor
Rule 103   factor -> brace
Rule 104   brace -> L_PAREN expr R_PAREN
Rule 105   brace -> brace PLUS_PLUS
Rule 106   brace -> brace MINUS_MINUS
Rule 107   brace -> INT_NUM
Rule 108   brace -> FLOAT_NUM
Rule 109   brace -> ID

Terminals, with rules where they appear

AND                  : 71
AND_ASSIGN           : 63
ASSIGN               : 18 20 22 24 25 58
BIT_AND              : 77
BIT_OR               : 73
BIT_XOR              : 75
COMMA                : 17 18 19 20 40 41 42 43 46 47
DIVIDE               : 95
DIV_ASSIGN           : 62
ELSE                 : 7 12
EQ                   : 79
FLOAT_NUM            : 108
FOR                  : 9 14
GE                   : 86
GT                   : 87
ID                   : 17 18 19 20 21 22 23 24 25 33 36 41 43 45 46 47 48 52 56 109
IF                   : 6 7 12
INT_NUM              : 34 40 42 44 107
LE                   : 84
LT                   : 85
L_FLOWBRACE          : 27
L_PAREN              : 15 16 36 52 56 104
L_SHIFT              : 88
L_SHIFT_ASSIGN       : 67
MINUS                : 92 100
MINUS_ASSIGN         : 60
MINUS_MINUS          : 102 106
MOD                  : 96
MOD_ASSIGN           : 66
MULTIPLY             : 94
MUL_ASSIGN           : 61
NE                   : 80
NOT                  : 98
OR                   : 69
OR_ASSIGN            : 64
PLUS                 : 91 99
PLUS_ASSIGN          : 59
PLUS_PLUS            : 101 105
RETURN               : 33 34
R_FLOWBRACE          : 27
R_PAREN              : 15 16 36 52 56 104
R_SHIFT              : 89
R_SHIFT_ASSIGN       : 68
SEMICOLON            : 16 21 22 23 24 28 30 33 34 36 53
TYPE                 : 23 24 25 26 46 47 48 52
WHILE                : 8 13
XOR_ASSIGN           : 65
error                : 

Nonterminals, with rules where they appear

assignment           : 55 56
block                : 11 54
brace                : 103 105 106
call_params          : 36 56
closed               : 5 7 12 12 13 14
condition            : 6 7 8 12 13
dec_params           : 52
declaration          : 16 29
empty                : 37 49
end_call_params      : 38 39
end_dec_params       : 50 51
expr                 : 15 16 16 18 20 22 24 28 55 56 104
exprAND              : 69 70 71
exprBITAND           : 75 76 77
exprBITOR            : 71 72 73
exprBITXOR           : 73 74 75
exprEQ               : 77 78 79 80
exprOP               : 88 89 90 91 92
exprOR               : 55 57 69
exprRELOP            : 79 80 81 82
exprSHIFT            : 82 83 88 89
factor               : 94 95 96 97 98 99 100 101 102
for_condition        : 9 14
function             : 31
function_2           : 52
function_call        : 25 32
multi_declaration    : 17 18 26
multiple_statements  : 1 2 27
open                 : 4 7 8 9
relop                : 82
simple               : 10
start                : 0
statement            : 2 3 6
stop                 : 26
term                 : 91 92 93 94 95 96
yes_call_params      : 38 40 41
yes_dec_params       : 46 50

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . multiple_statements
    (2) multiple_statements -> . multiple_statements statement
    (3) multiple_statements -> . statement
    (4) statement -> . open
    (5) statement -> . closed
    (6) open -> . IF condition statement
    (7) open -> . IF condition closed ELSE open
    (8) open -> . WHILE condition open
    (9) open -> . FOR for_condition open
    (10) closed -> . simple
    (11) closed -> . block
    (12) closed -> . IF condition closed ELSE closed
    (13) closed -> . WHILE condition closed
    (14) closed -> . FOR for_condition closed
    (28) simple -> . expr SEMICOLON
    (29) simple -> . declaration
    (30) simple -> . SEMICOLON
    (31) simple -> . function
    (32) simple -> . function_call
    (33) simple -> . RETURN ID SEMICOLON
    (34) simple -> . RETURN INT_NUM SEMICOLON
    (27) block -> . L_FLOWBRACE multiple_statements R_FLOWBRACE
    (55) expr -> . expr assignment exprOR
    (56) expr -> . expr assignment ID L_PAREN call_params R_PAREN
    (57) expr -> . exprOR
    (23) declaration -> . TYPE ID SEMICOLON
    (24) declaration -> . TYPE ID ASSIGN expr SEMICOLON
    (25) declaration -> . TYPE ID ASSIGN function_call
    (26) declaration -> . TYPE multi_declaration stop
    (52) function -> . TYPE ID L_PAREN dec_params R_PAREN function_2
    (36) function_call -> . ID L_PAREN call_params R_PAREN SEMICOLON
    (69) exprOR -> . exprOR OR exprAND
    (70) exprOR -> . exprAND
    (71) exprAND -> . exprAND AND exprBITOR
    (72) exprAND -> . exprBITOR
    (73) exprBITOR -> . exprBITOR BIT_OR exprBITXOR
    (74) exprBITOR -> . exprBITXOR
    (75) exprBITXOR -> . exprBITXOR BIT_XOR exprBITAND
    (76) exprBITXOR -> . exprBITAND
    (77) exprBITAND -> . exprBITAND BIT_AND exprEQ
    (78) exprBITAND -> . exprEQ
    (79) exprEQ -> . exprEQ EQ exprRELOP
    (80) exprEQ -> . exprEQ NE exprRELOP
    (81) exprEQ -> . exprRELOP
    (82) exprRELOP -> . exprRELOP relop exprSHIFT
    (83) exprRELOP -> . exprSHIFT
    (88) exprSHIFT -> . exprSHIFT L_SHIFT exprOP
    (89) exprSHIFT -> . exprSHIFT R_SHIFT exprOP
    (90) exprSHIFT -> . exprOP
    (91) exprOP -> . exprOP PLUS term
    (92) exprOP -> . exprOP MINUS term
    (93) exprOP -> . term
    (94) term -> . term MULTIPLY factor
    (95) term -> . term DIVIDE factor
    (96) term -> . term MOD factor
    (97) term -> . factor
    (98) factor -> . NOT factor
    (99) factor -> . PLUS factor
    (100) factor -> . MINUS factor
    (101) factor -> . PLUS_PLUS factor
    (102) factor -> . MINUS_MINUS factor
    (103) factor -> . brace
    (104) brace -> . L_PAREN expr R_PAREN
    (105) brace -> . brace PLUS_PLUS
    (106) brace -> . brace MINUS_MINUS
    (107) brace -> . INT_NUM
    (108) brace -> . FLOAT_NUM
    (109) brace -> . ID

    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    SEMICOLON       shift and go to state 12
    RETURN          shift and go to state 16
    L_FLOWBRACE     shift and go to state 19
    TYPE            shift and go to state 22
    ID              shift and go to state 17
    NOT             shift and go to state 35
    PLUS            shift and go to state 31
    MINUS           shift and go to state 33
    PLUS_PLUS       shift and go to state 36
    MINUS_MINUS     shift and go to state 37
    L_PAREN         shift and go to state 21
    INT_NUM         shift and go to state 18
    FLOAT_NUM       shift and go to state 39

    start                          shift and go to state 1
    multiple_statements            shift and go to state 2
    statement                      shift and go to state 3
    open                           shift and go to state 4
    closed                         shift and go to state 5
    simple                         shift and go to state 9
    block                          shift and go to state 10
    expr                           shift and go to state 11
    declaration                    shift and go to state 13
    function                       shift and go to state 14
    function_call                  shift and go to state 15
    exprOR                         shift and go to state 20
    exprAND                        shift and go to state 23
    exprBITOR                      shift and go to state 24
    exprBITXOR                     shift and go to state 25
    exprBITAND                     shift and go to state 26
    exprEQ                         shift and go to state 27
    exprRELOP                      shift and go to state 28
    exprSHIFT                      shift and go to state 29
    exprOP                         shift and go to state 30
    term                           shift and go to state 32
    factor                         shift and go to state 34
    brace                          shift and go to state 38

state 1

    (0) S' -> start .



state 2

    (1) start -> multiple_statements .
    (2) multiple_statements -> multiple_statements . statement
    (4) statement -> . open
    (5) statement -> . closed
    (6) open -> . IF condition statement
    (7) open -> . IF condition closed ELSE open
    (8) open -> . WHILE condition open
    (9) open -> . FOR for_condition open
    (10) closed -> . simple
    (11) closed -> . block
    (12) closed -> . IF condition closed ELSE closed
    (13) closed -> . WHILE condition closed
    (14) closed -> . FOR for_condition closed
    (28) simple -> . expr SEMICOLON
    (29) simple -> . declaration
    (30) simple -> . SEMICOLON
    (31) simple -> . function
    (32) simple -> . function_call
    (33) simple -> . RETURN ID SEMICOLON
    (34) simple -> . RETURN INT_NUM SEMICOLON
    (27) block -> . L_FLOWBRACE multiple_statements R_FLOWBRACE
    (55) expr -> . expr assignment exprOR
    (56) expr -> . expr assignment ID L_PAREN call_params R_PAREN
    (57) expr -> . exprOR
    (23) declaration -> . TYPE ID SEMICOLON
    (24) declaration -> . TYPE ID ASSIGN expr SEMICOLON
    (25) declaration -> . TYPE ID ASSIGN function_call
    (26) declaration -> . TYPE multi_declaration stop
    (52) function -> . TYPE ID L_PAREN dec_params R_PAREN function_2
    (36) function_call -> . ID L_PAREN call_params R_PAREN SEMICOLON
    (69) exprOR -> . exprOR OR exprAND
    (70) exprOR -> . exprAND
    (71) exprAND -> . exprAND AND exprBITOR
    (72) exprAND -> . exprBITOR
    (73) exprBITOR -> . exprBITOR BIT_OR exprBITXOR
    (74) exprBITOR -> . exprBITXOR
    (75) exprBITXOR -> . exprBITXOR BIT_XOR exprBITAND
    (76) exprBITXOR -> . exprBITAND
    (77) exprBITAND -> . exprBITAND BIT_AND exprEQ
    (78) exprBITAND -> . exprEQ
    (79) exprEQ -> . exprEQ EQ exprRELOP
    (80) exprEQ -> . exprEQ NE exprRELOP
    (81) exprEQ -> . exprRELOP
    (82) exprRELOP -> . exprRELOP relop exprSHIFT
    (83) exprRELOP -> . exprSHIFT
    (88) exprSHIFT -> . exprSHIFT L_SHIFT exprOP
    (89) exprSHIFT -> . exprSHIFT R_SHIFT exprOP
    (90) exprSHIFT -> . exprOP
    (91) exprOP -> . exprOP PLUS term
    (92) exprOP -> . exprOP MINUS term
    (93) exprOP -> . term
    (94) term -> . term MULTIPLY factor
    (95) term -> . term DIVIDE factor
    (96) term -> . term MOD factor
    (97) term -> . factor
    (98) factor -> . NOT factor
    (99) factor -> . PLUS factor
    (100) factor -> . MINUS factor
    (101) factor -> . PLUS_PLUS factor
    (102) factor -> . MINUS_MINUS factor
    (103) factor -> . brace
    (104) brace -> . L_PAREN expr R_PAREN
    (105) brace -> . brace PLUS_PLUS
    (106) brace -> . brace MINUS_MINUS
    (107) brace -> . INT_NUM
    (108) brace -> . FLOAT_NUM
    (109) brace -> . ID

    $end            reduce using rule 1 (start -> multiple_statements .)
    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FOR             shift and go to state 8
    SEMICOLON       shift and go to state 12
    RETURN          shift and go to state 16
    L_FLOWBRACE     shift and go to state 19
    TYPE            shift and go to state 22
    ID              shift and go to state 17
    NOT             shift and go to state 35
    PLUS            shift and go to state 31
    MINUS           shift and go to state 33
    PLUS_PLUS       shift and go to state 36
    MINUS_MINUS     shift and go to state 37
    L_PAREN         shift and go to state 21
    INT_NUM         shift and go to state 18
    FLOAT_NUM       shift and go to state 39

    statement                      shift and go to state 40
    open                           shift and go to state 4
    closed                         shift and go to state 5
    simple                         shift and go to state 9
    block                          shift and go to state 10
    expr                           shift and go to state 11
    declaration                    shift and go to state 13
    function                       shift and go to state 14
    function_call                  shift and go to state 15
    exprOR                         shift and go to state 20
    exprAND                        shift and go to state 23
    exprBITOR                      shift and go to state 24
    exprBITXOR                     shift and go to state 25
    exprBITAND                     shift and go to state 26
    exprEQ                         shift and go to state 27
    exprRELOP                      shift and go to state 28
    exprSHIFT                      shift and go to state 29
    exprOP                         shift and go to state 30
    term                           shift and go to state 32
    factor                         shift and go to state 34
    brace                          shift and go to state 38

state 3

    (3) multiple_statements -> statement .

    IF              reduce using rule 3 (multiple_statements -> statement .)
    WHILE           reduce using rule 3 (multiple_statements -> statement .)
    FOR             reduce using rule 3 (multiple_statements -> statement .)
    SEMICOLON       reduce using rule 3 (multiple_statements -> statement .)
    RETURN          reduce using rule 3 (multiple_statements -> statement .)
    L_FLOWBRACE     reduce using rule 3 (multiple_statements -> statement .)
    TYPE            reduce using rule 3 (multiple_statements -> statement .)
    ID              reduce using rule 3 (multiple_statements -> statement .)
    NOT             reduce using rule 3 (multiple_statements -> statement .)
    PLUS            reduce using rule 3 (multiple_statements -> statement .)
    MINUS           reduce using rule 3 (multiple_statements -> statement .)
    PLUS_PLUS       reduce using rule 3 (multiple_statements -> statement .)
    MINUS_MINUS     reduce using rule 3 (multiple_statements -> statement .)
    L_PAREN         reduce using rule 3 (multiple_statements -> statement .)
    INT_NUM         reduce using rule 3 (multiple_statements -> statement .)
    FLOAT_NUM       reduce using rule 3 (multiple_statements -> statement .)
    $end            reduce using rule 3 (multiple_statements -> statement .)
    R_FLOWBRACE     reduce using rule 3 (multiple_statements -> statement .)


state 4

    (4) statement -> open .

    IF              reduce using rule 4 (statement -> open .)
    WHILE           reduce using rule 4 (statement -> open .)
    FOR             reduce using rule 4 (statement -> open .)
    SEMICOLON       reduce using rule 4 (statement -> open .)
    RETURN          reduce using rule 4 (statement -> open .)
    L_FLOWBRACE     reduce using rule 4 (statement -> open .)
    TYPE            reduce using rule 4 (statement -> open .)
    ID              reduce using rule 4 (statement -> open .)
    NOT             reduce using rule 4 (statement -> open .)
    PLUS            reduce using rule 4 (statement -> open .)
    MINUS           reduce using rule 4 (statement -> open .)
    PLUS_PLUS       reduce using rule 4 (statement -> open .)
    MINUS_MINUS     reduce using rule 4 (statement -> open .)
    L_PAREN         reduce using rule 4 (statement -> open .)
    INT_NUM         reduce using rule 4 (statement -> open .)
    FLOAT_NUM       reduce using rule 4 (statement -> open .)
    $end            reduce using rule 4 (statement -> open .)
    R_FLOWBRACE     reduce using rule 4 (statement -> open .)


state 5

    (5) statement -> closed .

    IF              reduce using rule 5 (statement -> closed .)
    WHILE           reduce using rule 5 (statement -> closed .)
    FOR             reduce using rule 5 (statement -> closed .)
    SEMICOLON       reduce using rule 5 (statement -> closed .)
    RETURN          reduce using rule 5 (statement -> closed .)
    L_FLOWBRACE     reduce using rule 5 (statement -> closed .)
    TYPE            reduce using rule 5 (statement -> closed .)
    ID              reduce using rule 5 (statement -> closed .)
    NOT             reduce using rule 5 (statement -> closed .)
    PLUS            reduce using rule 5 (statement -> closed .)
    MINUS           reduce using rule 5 (statement -> closed .)
    PLUS_PLUS       reduce using rule 5 (statement -> closed .)
    MINUS_MINUS     reduce using rule 5 (statement -> closed .)
    L_PAREN         reduce using rule 5 (statement -> closed .)
    INT_NUM         reduce using rule 5 (statement -> closed .)
    FLOAT_NUM       reduce using rule 5 (statement -> closed .)
    $end            reduce using rule 5 (statement -> closed .)
    R_FLOWBRACE     reduce using rule 5 (statement -> closed .)


state 6

    (6) open -> IF . condition statement
    (7) open -> IF . condition closed ELSE open
    (12) closed -> IF . condition closed ELSE closed
    (15) condition -> . L_PAREN expr R_PAREN

    L_PAREN         shift and go to state 42

    condition                      shift and go to state 41

state 7

    (8) open -> WHILE . condition open
    (13) closed -> WHILE . condition closed
    (15) condition -> . L_PAREN expr R_PAREN

    L_PAREN         shift and go to state 42

    condition                      shift and go to state 43

state 8

    (9) open -> FOR . for_condition open
    (14) closed -> FOR . for_condition closed
    (16) for_condition -> . L_PAREN declaration expr SEMICOLON expr R_PAREN

    L_PAREN         shift and go to state 45

    for_condition                  shift and go to state 44

state 9

    (10) closed -> simple .

    IF              reduce using rule 10 (closed -> simple .)
    WHILE           reduce using rule 10 (closed -> simple .)
    FOR             reduce using rule 10 (closed -> simple .)
    SEMICOLON       reduce using rule 10 (closed -> simple .)
    RETURN          reduce using rule 10 (closed -> simple .)
    L_FLOWBRACE     reduce using rule 10 (closed -> simple .)
    TYPE            reduce using rule 10 (closed -> simple .)
    ID              reduce using rule 10 (closed -> simple .)
    NOT             reduce using rule 10 (closed -> simple .)
    PLUS            reduce using rule 10 (closed -> simple .)
    MINUS           reduce using rule 10 (closed -> simple .)
    PLUS_PLUS       reduce using rule 10 (closed -> simple .)
    MINUS_MINUS     reduce using rule 10 (closed -> simple .)
    L_PAREN         reduce using rule 10 (closed -> simple .)
    INT_NUM         reduce using rule 10 (closed -> simple .)
    FLOAT_NUM       reduce using rule 10 (closed -> simple .)
    $end            reduce using rule 10 (closed -> simple .)
    R_FLOWBRACE     reduce using rule 10 (closed -> simple .)
    ELSE            reduce using rule 10 (closed -> simple .)


state 10

    (11) closed -> block .
